[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Animes/blue/2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/dragMove.gd" type="Script" id=2]
[ext_resource path="res://Assets/Animes/blue/bubble_wiggle.tres" type="Animation" id=3]
[ext_resource path="res://Scripts/Sprite.gd" type="Script" id=4]
[ext_resource path="res://Assets/Animes/blue/1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Animes/blue/4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Animes/blue/3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Animes/blue/5.png" type="Texture" id=8]
[ext_resource path="res://Assets/Animes/blue/bubble_inside.tres" type="Animation" id=9]
[ext_resource path="res://Assets/Animes/blue/bubble_rotate.tres" type="Animation" id=10]
[ext_resource path="res://Assets/Animes/blue/anim_tree_root.tres" type="AnimationNodeStateMachine" id=11]
[ext_resource path="res://Scripts/AnimationTree.gd" type="Script" id=12]
[ext_resource path="res://Scripts/DoubleTap.gd" type="Script" id=13]
[ext_resource path="res://Scenes/lightning.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/basicDamageAnim.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/speedPow.gd" type="Script" id=16]
[ext_resource path="res://Scenes/shieldForm.tscn" type="PackedScene" id=17]
[ext_resource path="res://Assets/sprites/powerups/shield.tres" type="Animation" id=18]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[sub_resource type="CircleShape2D" id=3]

[node name="PLayer" type="Node2D"]
process_priority = -1
position = Vector2( -2.08105, 6.95801 )

[node name="Player" type="KinematicBody2D" parent="."]
process_priority = 1
position = Vector2( 536.115, 1012.6 )
scale = Vector2( 0.789771, 0.789771 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -4.79852, -0.000244141 )
scale = Vector2( 18.2731, 19.2073 )
shape = SubResource( 1 )

[node name="main_bg" type="Sprite" parent="Player"]
position = Vector2( 0, -2.9364 )
scale = Vector2( 0.469394, 0.469394 )
texture = ExtResource( 8 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="2nd_lay" type="Sprite" parent="Player/main_bg"]
texture = ExtResource( 6 )

[node name="white_tear" type="Sprite" parent="Player/main_bg"]
texture = ExtResource( 7 )

[node name="white2nd" type="Sprite" parent="Player/main_bg"]
texture = ExtResource( 1 )

[node name="white_dot" type="Sprite" parent="Player/main_bg"]
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/main_bg"]
playback_speed = 3.0
anims/Bubble_rotate = ExtResource( 10 )
anims/bubble_inside = ExtResource( 9 )
anims/bubble_wiggle = ExtResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="Player/main_bg"]
tree_root = ExtResource( 11 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 2 )
parameters/BlendTree2/Add2/add_amount = 0.86
parameters/BlendTree2/TimeScale/scale = 0.86
script = ExtResource( 12 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="Player"]
position = Vector2( -415.899, -392.098 )
scale = Vector2( 41.1583, 40.2299 )
shape = SubResource( 3 )
shape_visible = false
script = ExtResource( 13 )

[node name="AnimatedSprite" parent="Player" instance=ExtResource( 14 )]
position = Vector2( -6.24025, -6.68161 )
scale = Vector2( 1.26619, 1.26619 )
z_index = 2

[node name="basicDamageAnim" parent="Player" instance=ExtResource( 15 )]
position = Vector2( -1.07935, -2.52271 )
scale = Vector2( 0.471314, 0.471314 )

[node name="speedBoost" type="Node" parent="Player"]
script = ExtResource( 16 )

[node name="speedTimer" type="Timer" parent="Player/speedBoost"]

[node name="shield" parent="Player" instance=ExtResource( 17 )]
position = Vector2( 6.93695, -5.35925 )
scale = Vector2( 1.58877, 1.58877 )
z_index = -1

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Player/shield"]
anims/shield = ExtResource( 18 )
[connection signal="double_tap" from="Player/TouchScreenButton" to="Player/TouchScreenButton" method="_on_TouchScreenButton_double_tap"]
[connection signal="pressed" from="Player/TouchScreenButton" to="Player" method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="Player/TouchScreenButton" to="Player" method="_on_TouchScreenButton_released"]
[connection signal="timeout" from="Player/speedBoost/speedTimer" to="Player/speedBoost" method="_on_speedTimer_timeout"]
